# dynamic-dca

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  dynamic_dca.py  pyproject.toml  update_balance.py  update_risks.py
.github/workflows/: ci.yml
config/: example-config.json  example-secrets.json
src/dynamic_dca/: dynamic_dca.py  update_balance.py  update_risk.py  update_risks.py
src/providers/banks/: base_bank.py  up_bank.py
src/providers/risks/: alphasquared.py  base_risk.py
tests/: test_update_balance.py  test_update_risk.py  test_update_risks.py
