[project]
name = "dynamic-dca"
version = "0.1.0"
description = "Generate a dynamic DCA buy/sell based on a risk index"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
]

[project.scripts]
update_balance = "dynamic_dca.update_balance:main"
update_risk = "dynamic_dca.update_risk:main"
dynamic_dca = "dynamic_dca.dynamic_dca:main"

[tool.ruff]
line-length = 120
indent-width = 4
exclude = [".venv", ".idea"]
