[project]
name = "dynamic-dca"
version = "0.1.0"
description = "Generate a dynamic DCA buy/sell based on a risk index"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
]

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''
